# potus-scraper

./: eda.ipynb  pyproject.toml  scrapy.cfg
potus_scraper/: middlewares.py  pipelines.py
potus_scraper/spiders/: sotu_spider.py
sotu_scraper/: items.py  settings.py
sotu_scraper/spiders/: sotu_spider.py
