[tool.poetry]
name = "stotu-scraper"
version = "0.1.0"
description = ""
authors = ["jsulz <j.sulzdorf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.2"
pandas = "^2.2.2"
nltk = "^3.9.1"
contractions = "^0.1.73"
matplotlib = "^3.9.2"
fastparquet = "^2024.5.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
